// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendCommandConfirmation matches snapshot hidden 1`] = `
<Dialog
  modalType="alert"
  onOpenChange={[Function]}
  open={false}
>
  <DialogSurface>
    <DialogBody>
      <DialogTitle>
        deviceCommands.confirmSend.title
      </DialogTitle>
      <div>
        deviceCommands.confirmSend.body
      </div>
      <DialogActions>
        <Button
          appearance="primary"
          aria-label="deviceCommands.confirmSend.yes.ariaLabel"
          onClick={[MockFunction]}
        >
          deviceCommands.confirmSend.yes.label
        </Button>
        <Button
          aria-label="deviceCommands.confirmSend.no.ariaLabel"
          onClick={[MockFunction]}
        >
          deviceCommands.confirmSend.no.label
        </Button>
      </DialogActions>
    </DialogBody>
  </DialogSurface>
</Dialog>
`;

exports[`SendCommandConfirmation matches snapshot visible 1`] = `
<Dialog
  modalType="alert"
  onOpenChange={[Function]}
  open={true}
>
  <DialogSurface>
    <DialogBody>
      <DialogTitle>
        deviceCommands.confirmSend.title
      </DialogTitle>
      <div>
        deviceCommands.confirmSend.body
      </div>
      <DialogActions>
        <Button
          appearance="primary"
          aria-label="deviceCommands.confirmSend.yes.ariaLabel"
          onClick={[MockFunction]}
        >
          deviceCommands.confirmSend.yes.label
        </Button>
        <Button
          aria-label="deviceCommands.confirmSend.no.ariaLabel"
          onClick={[MockFunction]}
        >
          deviceCommands.confirmSend.no.label
        </Button>
      </DialogActions>
    </DialogBody>
  </DialogSurface>
</Dialog>
`;
